--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -5,13 +5,13 @@
 _gemname='crack'
 pkgname="ruby-${_gemname}"
 pkgver=0.4.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Really simple JSON and XML parsing, ripped from Merb and Rails.'
 arch=('any')
 url='https://github.com/jnunemaker/crack/'
 license=('MIT')
 makedepends=('ruby-rdoc')
-depends=('ruby' 'ruby-safe_yaml')
+depends=('ruby' 'ruby-safe_yaml' 'ruby-rexml')
 checkdepends=('ruby-minitest')
 options=(!emptydirs)
 source=("${url}/archive/v${pkgver}/${pkgname}-v${pkgver}.tar.gz")
