--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -1,10 +1,10 @@
-# maintainer: Christian Rebischje <chris.rebischke@archlinux.org>
+# Maintainer: Christian Rebischke <chris.rebischke@archlinux.org>
 # Contributor: Tim Meusel <tim@bastelfreak.de>
 
 _gemname='hashdiff'
 pkgname="ruby-${_gemname}"
 pkgver=1.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc='Library to compute the smallest difference between two hashes'
 arch=('any')
 url='https://github.com/liufengyun/hashdiff'
